@@ -718,7 +718,7 @@ SnapEwin(EWin * ewin, int dx, int dy, int *new_dx, int *new_dy)
      {
 	if (!last_res)
 	  {
-/*	     AUDIO_PLAY("SOUND_MOVE_RESIST");*/
+/*           AUDIO_PLAY("SOUND_MOVE_RESIST"); */
 	     last_res = 1;
 	  }
      }
