@@ -1487,3 +1487,12 @@ Wed Sep  8 20:01:58 PDT 1999
 (Raster)
 
 hmm how come this didnt get in?
+
+-------------------------------------------------------------------------------
+
+Wed Sep  8 20:24:28 PDT 1999
+(KainX)
+
+Fixed a typo in the KDE hint stuff.
+
+Also removed old crappy themes to make room for newer, spiffier ones.
